# firecalendar

./: AGENTS.md  Cargo.toml  ROADMAP.md
src/: main.rs
src/core/: error.rs  event.rs  mod.rs  store.rs
src/tui/: app.rs  mod.rs  ui.rs
